Sabadão no Discord
Entrada OK
Falta Determinizar e etc.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ProjetoLFA/obj/Debug/ProjetoLFA.csproj.CoreCompileInputs.cache
 ProjetoLFA/obj/Debug/ProjetoLFA.csproj.CoreCompileInputs.cache
 *.cache
 ProjetoLFA/obj/Debug/ProjetoLFA.csproj.CoreCompileInputs.cache
+ProjetoLFA/bin/Debug/Entrada.txt
